<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Been There, Done That!</string>
    <string name="help">Help Screen</string>
    <string name="menu">Main Menu</string>
    <string name="settings">Settings Screen</string>
    <string name="game">Game Screen</string>
    <string name="scores">Scores Screen</string>
    <string name="app_logo_top">BEEN THERE</string>
    <string name="app_logo_bottom">DONE THAT!</string>
    <string name="app_version_info">Version 2.0.0\nCopyright 2011 Mamlambo\nAll Rights Reserved</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_play">Play Game</string>
    <string name="menu_item_scores">View Scores</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_icon_picture">menu icon</string>
    <string name="menu_half_image">bottom half image</string>
</resources>
