<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout 
    	android:id="@+id/linearLayout1" 
    	xmlns:android="http://schemas.android.com/apk/res/android" 
    	android:background="@android:color/black" 
    	android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent">
        <TextView 
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/TextViewTopTitle" 
        	android:text="@string/app_logo_top" 
        	android:textColor="@color/logo_color"
        	android:textSize="@dimen/logo_size"
        	android:gravity="center"></TextView>
        <TableLayout 
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:stretchColumns="*" 
        	android:id="@+id/TableLayout01">
        	<TableRow
        		android:id="@+id/TableRow01"
        		android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		android:layout_gravity="center_vertical|center_horizontal">
        		<ImageView
        			android:id="@+id/ImageView2_Left"
        			android:layout_gravity="center_vertical|center_horizontal"
        			android:src="@drawable/daffy_porky" 
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"></ImageView>
        		<ImageView
        			android:id="@+id/ImageView2_Left"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_gravity="center_vertical|center_horizontal"
        			android:src="@drawable/looney_tunes"></ImageView>
        	</TableRow>
        	<TableRow
        		android:id="@+id/TableRow02"
        		android:layout_height="wrap_content"
        		android:layout_width="wrap_content"
        		android:layout_gravity="center_vertical|center_horizontal">
        		<ImageView
        			android:id="@+id/ImageView3_Left"
        			android:layout_width="wrap_content"
        			android:layout_gravity="center_vertical|center_horizontal"
        			android:src="@drawable/tazmania" 
        			android:layout_height="wrap_content"></ImageView>
        		<ImageView
        			android:id="@+id/ImageView3_Left"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:layout_gravity="center_vertical|center_horizontal"
        			android:src="@drawable/tweety"></ImageView>
        	</TableRow>
        </TableLayout>
        <TextView
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:id="@+id/TextViewBottomTitle"
        	android:text="@string/app_logo_bottom"
        	android:textColor="@color/logo_color"
        	android:gravity="center"
        	android:textSize="@dimen/logo_size"></TextView>
        <TextView
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_vertical|center_horizontal"
        	android:id="@+id/TextViewBottomVersion"
        	android:text="@string/app_version_info"
        	android:textColor="@color/version_color"
        	android:textSize="@dimen/version_size"
        	android:background="@color/version_bkgrd"
        	android:lineSpacingExtra="@dimen/version_spacing"
        	android:gravity="center"></TextView>
    </LinearLayout>
